--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -4,34 +4,35 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:0cvbnyBEopLDbg==,iv:ysbeTDVg7EH3/HXOfeYKWJPGx61PZ4Sm/ImBfvfUtQ4=,tag:LBq298Pr64rGb9kJakAXPQ==,type:str]
-    SECRET_EMAIL: ENC[AES256_GCM,data:pRwzk/h99pPIq+DDSPQ5TTrYJ2E=,iv:DgUrE6pgV9vzQuxAs/8gxGhEbX96OBnqcw6qxbJTOcc=,tag:X3EbFCBGxeVM0RdhhU1gOg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:OEkLcpNOnQP30w==,iv:FJDecDTIG4a1mtW+UjSRmlxNa4Y22Wak494rxIYMJqM=,tag:rCz8lohaqd0DKYAr7tK/9A==,type:str]
+    SECRET_EMAIL: ENC[AES256_GCM,data:LXChUSmsJosbnoOeCYkFjouHPpQ=,iv:2f9wIrQ0X756pSt8NWc83/5R1BtznVl/oZ1rIo9tvJY=,tag:A1+kBxRd4rFiTsWlIYqSjw==,type:str]
+    SECRET_GEOIP2_LICENSE: ENC[AES256_GCM,data:THKEX5DSVfxU4kfW1SXd1J/ZFG5My/rP3OKDn39rvZeN/aALx9A6iQ==,iv:5X3uNrKO8CdF4ICXsi4yIMKzfHvv/udMk1vrlJYVnEE=,tag:/Mi39HesLRiaXSVe+foJmw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-06-12T09:55:33Z"
-    mac: ENC[AES256_GCM,data:ExKlDUb5gUeiYGGxrULPvu4a4IugUBw6vnXAJIFYnLLnHmE8G1v4KsSKhNQ6THizLWZ0t/9lo8pTNx+xv9TPhhyadncRwAWutGU0OWM/4WmJTeSK/XW1bxO2/zsKKTyjYM38lRTpPvd5lHbwDlBeoeWlYj9WdIia1qSfrRZTDWQ=,iv:d8E6cmVOcqw0mC2G42Wit6lsEDmV66Lo02oJjC/Ncpc=,tag:WH74bhiRampaV2gPUJYDCA==,type:str]
+    lastmodified: "2024-07-22T19:57:41Z"
+    mac: ENC[AES256_GCM,data:34RUyOt247YVszO5iKW7BjUCqrLTzPbTGQkQR81z42whnghcjQcf7+2E6EpXYuXMtU+yvNs/xAMxAv9+YaZy/PP8QwmqfHXVqaXdsu4L+zg3uDl7I53T1LzQ62zu/orju6caT26zFWJtMXEvpGZmJL13MuWYqozU/iHfJNnTMQ4=,iv:DqZtbR5ka5NnEcYyePzOI8JR5+y5QgVxDUC51iqMC7M=,tag:h9liJdLoEgLWNwyM2vnsxQ==,type:str]
     pgp:
-        - created_at: "2021-06-12T09:55:31Z"
-          enc: |
+        - created_at: "2024-07-22T19:57:41Z"
+          enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv9FWXQVLELUYX31Pv0x/BkgKosh3BTClGLd7X56gOYrqQG
-            wfQvwbTpGFJFCAOVjoRSTEI8L7e/nVgQMeucrX9cN7dePa2zDaTjei60UTuIXSXM
-            mmIzKqkduwIOTwc1NprHlozT3eyfhbeY1q5hRlEImjwgexuTLeXaaog61iIWbQE3
-            1Ly5O9tvGY3QUWLyLpvMfAvpnBCBmsppbTQU4Jn7uY+Urfk/FB/Q6EuIqeRNzeU8
-            fV1imVHi01fLB7oH+Up7q0vFpu145ye/rWMN3bVzB1XmijC1VBP9bbcRPqMgXg4i
-            6k6BnBpJysWaps2lDno/Irx66o3qxGEQ5sgIqFZTPfWMWW+Nh5A9WV3xm3w42zOV
-            YEAOHOonDcyQ8Hcw/5SrugutznAX41gCvWCiKHrMqxVX2c8vB+N1YqNQZkpqu/jT
-            q/MTY1CXDQGxQyyIHted2D9iNy4xs/j68xgZvEmbgnp1yJSJQE5v5tAc+jHaE8LI
-            0ELWtLW61a7JHPcamuzq0l4BjzMG/W3RNct68lKu0SgjAZQKOKziFIbPmI8VQuEs
-            9QZ3pTlpYRT4DxOwTFfeofC2KN0/cYNUULswdBe/aALCOwCktX5xfA01cLyogNbf
-            q7vuBBjcLKxTpZWU7BnQ
-            =0ZPR
+            hQGMA71EESEn7N2iAQv/UD6IJafdgBcRtEOC/blUqpilvmdlqApiQsKA/XL/Yph/
+            s+m7FOgzFY4Ph641TdelY6x8yEdHjkzyiaOxcW7fGaC9CNGIB6h45Yk0ChzfrMpe
+            WNFEsSGIqxM/4rIkxhDR7SoUAz0f5mZE/tN5+Q6Ci5yT1+4jsjPFOvoAcisc1H0H
+            glUOug/yz5hgZRY+uyRugMHoMjvUsrA8bnNiEjg8L6N2OSKasKG7pZvBNAQYoYyk
+            yhUg++7k0LXH0yuyJsowQSNbZWOghb5XqaklFRGXIjvKyEaUfwOEtacrrVbb6KJs
+            14suuj0E+pYFGtCE81S12L3LoT04R3D/ADTdDEYxa/ohp04C+hACb/MhDClhQ+oA
+            o1vNZhFqheLaxbt8GZrpTOm1ahSIRj7PB4+gJRA4/7xExMc7p8lWNvNU7xoPIgeb
+            JvPiRo5K/F1i9hsaD4NMb6/1VHcYLa7JXGbek+0eRuHA9nptZPAQwWG40vh9QZUx
+            zdWzaTskO5CVDAZ4a1AH0l4Bk9I14nsdvxuDE7VPf9UKiQBLbuuxStbF5eDApqzk
+            KrPSomNi/8L4aHhuJxTn1jE6ThfotLpoy3UBzwvFKf55CQxYBvCYMLXKO96gmugI
+            XuSIIhmshQV8CpnfYnjl
+            =lNXN
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.1
+    version: 3.8.1
