--- a/cluster/apps/networking/nginx/configmap.yaml
+++ b/cluster/apps/networking/nginx/configmap.yaml
@@ -2,7 +2,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: upstream-custom-headers
-  namespace: ingress-nginx
+  namespace: networking
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
