chore(v-rising): remove v-rising manifests

--- a/cluster/apps/default/v-rising/secrets.enc.yaml
+++ b/cluster/apps/default/v-rising/secrets.enc.yaml
@@ -1,36 +1,36 @@
-apiVersion: v1
-kind: Secret
-metadata:
-    name: v-rising-secrets
-    namespace: default
-stringData:
-    V_RISING_PASSW: ENC[AES256_GCM,data:8sBNz+kiyQ==,iv:y7oSf97xreaLJfeWanqQoQ40pTLgSYcpWx0UDXIC4bs=,tag:Fph6OKTl2QVAu9FPmoKYZw==,type:str]
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age: []
-    lastmodified: "2022-05-25T19:24:22Z"
-    mac: ENC[AES256_GCM,data:bNDeiycjWOfetlEWUQMCBeO4qj9ibsH/lPCBiO+yajfJRO1UZs6roqM/ScWfFp7VRhQJB1d9vmlwUe+xI1UrsiqGZt9Ur8EkHEgyR/3xNQ/U/EOfOZCrkGlZ6FRAIqcLmijcD63Ep7990I8sLVsDRYBOXed/7Vpe1q4nUoKJryI=,iv:VUon5hdBIE5ZuvmE22d4glxJRzhpXYm6klO9NJ10oGk=,tag:+4MnwFIlemAJ4dzXQbzkRQ==,type:str]
-    pgp:
-        - created_at: "2022-05-25T19:24:21Z"
-          enc: |
-            -----BEGIN PGP MESSAGE-----
-
-            hQGMA71EESEn7N2iAQv/WX1JwuoXLRF7kFieEsI5goTsXvZTdankd4Gy4AwuuUqO
-            dkR3WR3mQb5N5hnY1twa9zejbpmDx/Nt+qNlGFx4l2cUCL0t5k87dzyKU+n1NNTF
-            vB4vnMYouB6xVuKN0+4yikMWFbr24yi9HoCT8Ite0fPpCNxTfa/rRZcXMmMD5YSV
-            1rHoOgpw/Y7nUyCuzmNyQ5u6gLmv9YTY5trjK69a7Zml762Quk8hjevmhXlezgIF
-            e0h7osAhE0vw8lfer6m07Vb9Z0wu+o2wP2Hdc7ESv6tax/1IwUDm1lFWSCbF0plO
-            ViRugj54H6wrkMWSCcSYkpTaCELKv6rk4hN5cltMLtsRZVtab+W2QZoG0/jJYDQC
-            8BlTmNGyZ9LTuHRdyA9II/yAd+7tNcjA5O/vBjZWaM3MQ9zIXKY22ra0gvgSr7jC
-            TUNdyooxL9CXjBabXgqiE2T1zLVSGi8CKBo9EuJs7/lk+Z3Lq1bLL6SnhAl3vnPS
-            dgw/oqIbKUy6mP9INHFa0lwBbCoa9b81ZyfwnoExvGnScgjYxJb9JkP7IkqWMprx
-            Vt93hrdq+3iSnpyVAuOii04d2Bdk+R/dRNVTBfJgWy2w4ho4eGZJ/LuINAPVFZB9
-            TAIOrbOrXqdlbf/Viw==
-            =RHD7
-            -----END PGP MESSAGE-----
-          fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
-    encrypted_regex: ^(data|stringData)$
-    version: 3.7.2
+#apiVersion: v1
+#kind: Secret
+#metadata:
+#    name: v-rising-secrets
+#    namespace: default
+#stringData:
+#    V_RISING_PASSW: ENC[AES256_GCM,data:8sBNz+kiyQ==,iv:y7oSf97xreaLJfeWanqQoQ40pTLgSYcpWx0UDXIC4bs=,tag:Fph6OKTl2QVAu9FPmoKYZw==,type:str]
+#sops:
+#    kms: []
+#    gcp_kms: []
+#    azure_kv: []
+#    hc_vault: []
+#    age: []
+#    lastmodified: "2022-05-25T19:24:22Z"
+#    mac: ENC[AES256_GCM,data:bNDeiycjWOfetlEWUQMCBeO4qj9ibsH/lPCBiO+yajfJRO1UZs6roqM/ScWfFp7VRhQJB1d9vmlwUe+xI1UrsiqGZt9Ur8EkHEgyR/3xNQ/U/EOfOZCrkGlZ6FRAIqcLmijcD63Ep7990I8sLVsDRYBOXed/7Vpe1q4nUoKJryI=,iv:VUon5hdBIE5ZuvmE22d4glxJRzhpXYm6klO9NJ10oGk=,tag:+4MnwFIlemAJ4dzXQbzkRQ==,type:str]
+#    pgp:
+#        - created_at: "2022-05-25T19:24:21Z"
+#          enc: |
+#            -----BEGIN PGP MESSAGE-----
+#
+#            hQGMA71EESEn7N2iAQv/WX1JwuoXLRF7kFieEsI5goTsXvZTdankd4Gy4AwuuUqO
+#            dkR3WR3mQb5N5hnY1twa9zejbpmDx/Nt+qNlGFx4l2cUCL0t5k87dzyKU+n1NNTF
+#            vB4vnMYouB6xVuKN0+4yikMWFbr24yi9HoCT8Ite0fPpCNxTfa/rRZcXMmMD5YSV
+#            1rHoOgpw/Y7nUyCuzmNyQ5u6gLmv9YTY5trjK69a7Zml762Quk8hjevmhXlezgIF
+#            e0h7osAhE0vw8lfer6m07Vb9Z0wu+o2wP2Hdc7ESv6tax/1IwUDm1lFWSCbF0plO
+#            ViRugj54H6wrkMWSCcSYkpTaCELKv6rk4hN5cltMLtsRZVtab+W2QZoG0/jJYDQC
+#            8BlTmNGyZ9LTuHRdyA9II/yAd+7tNcjA5O/vBjZWaM3MQ9zIXKY22ra0gvgSr7jC
+#            TUNdyooxL9CXjBabXgqiE2T1zLVSGi8CKBo9EuJs7/lk+Z3Lq1bLL6SnhAl3vnPS
+#            dgw/oqIbKUy6mP9INHFa0lwBbCoa9b81ZyfwnoExvGnScgjYxJb9JkP7IkqWMprx
+#            Vt93hrdq+3iSnpyVAuOii04d2Bdk+R/dRNVTBfJgWy2w4ho4eGZJ/LuINAPVFZB9
+#            TAIOrbOrXqdlbf/Viw==
+#            =RHD7
+#            -----END PGP MESSAGE-----
+#          fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
+#    encrypted_regex: ^(data|stringData)$
+#    version: 3.7.2
