--- a/cluster/apps/default/v-rising/deployment.yaml
+++ b/cluster/apps/default/v-rising/deployment.yaml
@@ -1,79 +1,79 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: v-rising-deployment
-  namespace: default
-  labels:
-    app: v-rising
-spec:
-  replicas: 0
-  strategy:
-    type: Recreate
-  selector:
-    matchLabels:
-      app: v-rising
-  template:
-    metadata:
-      labels:
-        app: v-rising
-    spec:
-      containers:
-        - name: v-rising
-          # https://hub.docker.com/r/mephi00/v-rising-wine
-          image: mephi00/v-rising-wine
-          imagePullPolicy: IfNotPresent
-          ports:
-            - protocol: UDP
-              containerPort: 9876
-            - protocol: UDP
-              containerPort: 9877
-          env:
-            - name: V_RISING_NAME
-              value: "Orange Red Yellow"
-            - name: V_RISING_SAVE_NAME
-              value: "save1"
-            - name: V_RISING_PUBLIC_LIST
-              value: "true"
-            - name: V_RISING_GAME_MODE
-              value: "PvE"
-            - name: V_RISING_MAX_USER
-              value: "4"
-            - name: V_RISING_AUTOSAVE_COUNT
-              value: "15"
-            - name: V_RISING_AUTOSAVE_INTERVAL
-              value: "120"
-          envFrom:
-            - secretRef:
-                name: v-rising-secrets
-          volumeMounts:
-            - mountPath: "/saves"
-              name: v-rising-volume
-            - name: v-rising-host-settings-volume
-              mountPath: /templates/ServerHostSetting.templ
-              subPath: ServerHostSetting.templ
-          resources:
-            requests:
-              memory: 2048Mi
-              cpu: 500m
-      volumes:
-        - name: v-rising-volume
-          persistentVolumeClaim:
-            claimName: v-rising-saves-pvc-v3
-        - name: v-rising-host-settings-volume
-          configMap:
-            name: v-rising-host-settings
-      # Only run on k8-w1, non ARM
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-              - matchExpressions:
-                  - key: kubernetes.io/hostname
-                    operator: In
-                    values:
-                      - k8-w1
-      # id of "steam" user in image
-      securityContext:
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
+#apiVersion: apps/v1
+#kind: Deployment
+#metadata:
+#  name: v-rising-deployment
+#  namespace: default
+#  labels:
+#    app: v-rising
+#spec:
+#  replicas: 0
+#  strategy:
+#    type: Recreate
+#  selector:
+#    matchLabels:
+#      app: v-rising
+#  template:
+#    metadata:
+#      labels:
+#        app: v-rising
+#    spec:
+#      containers:
+#        - name: v-rising
+#          # https://hub.docker.com/r/mephi00/v-rising-wine
+#          image: mephi00/v-rising-wine
+#          imagePullPolicy: IfNotPresent
+#          ports:
+#            - protocol: UDP
+#              containerPort: 9876
+#            - protocol: UDP
+#              containerPort: 9877
+#          env:
+#            - name: V_RISING_NAME
+#              value: "Orange Red Yellow"
+#            - name: V_RISING_SAVE_NAME
+#              value: "save1"
+#            - name: V_RISING_PUBLIC_LIST
+#              value: "true"
+#            - name: V_RISING_GAME_MODE
+#              value: "PvE"
+#            - name: V_RISING_MAX_USER
+#              value: "4"
+#            - name: V_RISING_AUTOSAVE_COUNT
+#              value: "15"
+#            - name: V_RISING_AUTOSAVE_INTERVAL
+#              value: "120"
+#          envFrom:
+#            - secretRef:
+#                name: v-rising-secrets
+#          volumeMounts:
+#            - mountPath: "/saves"
+#              name: v-rising-volume
+#            - name: v-rising-host-settings-volume
+#              mountPath: /templates/ServerHostSetting.templ
+#              subPath: ServerHostSetting.templ
+#          resources:
+#            requests:
+#              memory: 2048Mi
+#              cpu: 500m
+#      volumes:
+#        - name: v-rising-volume
+#          persistentVolumeClaim:
+#            claimName: v-rising-saves-pvc-v3
+#        - name: v-rising-host-settings-volume
+#          configMap:
+#            name: v-rising-host-settings
+#      # Only run on k8-w1, non ARM
+#      affinity:
+#        nodeAffinity:
+#          requiredDuringSchedulingIgnoredDuringExecution:
+#            nodeSelectorTerms:
+#              - matchExpressions:
+#                  - key: kubernetes.io/hostname
+#                    operator: In
+#                    values:
+#                      - k8-w1
+#      # id of "steam" user in image
+#      securityContext:
+#        runAsUser: 1000
+#        runAsGroup: 1000
+#        fsGroup: 1000
