--- a/cluster/apps/default/v-rising/svc.yaml
+++ b/cluster/apps/default/v-rising/svc.yaml
@@ -1,26 +1,26 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: v-rising-svc
-  namespace: default
-
-  # Needed if sharing UDP and TCP services, not sure if this is actually needed here though
-  annotations:
-    metallb.universe.tf/allow-shared-ip: v-rising
-spec:
-  # Not sure why this service is needed. See https://www.debontonline.com/2021/01/part-14-deploy-plexserver-yaml-with.html
-  type: LoadBalancer
-  # Needed since plex only considers clients as local if they're on the same subnet
-  loadBalancerIP: 192.168.1.242
-  externalTrafficPolicy: Cluster
-  selector:
-    app: v-rising
-  ports:
-    - name: udp1
-      protocol: UDP
-      port: 9876
-      targetPort: 9876
-    - name: udp2
-      protocol: UDP
-      port: 9877
-      targetPort: 9877
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: v-rising-svc
+#  namespace: default
+#
+#  # Needed if sharing UDP and TCP services, not sure if this is actually needed here though
+#  annotations:
+#    metallb.universe.tf/allow-shared-ip: v-rising
+#spec:
+#  # Not sure why this service is needed. See https://www.debontonline.com/2021/01/part-14-deploy-plexserver-yaml-with.html
+#  type: LoadBalancer
+#  # Needed since plex only considers clients as local if they're on the same subnet
+#  loadBalancerIP: 192.168.1.242
+#  externalTrafficPolicy: Cluster
+#  selector:
+#    app: v-rising
+#  ports:
+#    - name: udp1
+#      protocol: UDP
+#      port: 9876
+#      targetPort: 9876
+#    - name: udp2
+#      protocol: UDP
+#      port: 9877
+#      targetPort: 9877
