fix(loki): remove deprecated keys in helm chart

--- a/cluster/apps/monitoring/loki/loki-helm-release.yaml
+++ b/cluster/apps/monitoring/loki/loki-helm-release.yaml
@@ -58,7 +58,6 @@ spec:
 
       limits_config:
         retention_period: 60d
-        enforce_metric_name: false
         reject_old_samples: true
         reject_old_samples_max_age: 168h
         max_cache_freshness_per_query: 10m
@@ -74,7 +73,8 @@ spec:
 
       query_range:
         parallelise_shardable_queries: false
-        split_queries_by_interval: 0
+        # Not sure what this does but remove it to make loki v3+ work
+        # split_queries_by_interval: 0
 
       commonConfig:
         path_prefix: /var/loki
