fix(loki): turn off chunks cache as well

--- a/cluster/apps/monitoring/loki/loki-helm-release.yaml
+++ b/cluster/apps/monitoring/loki/loki-helm-release.yaml
@@ -31,8 +31,9 @@ spec:
       replicas: 0
     backend:
       replicas: 0
+    chunksCache:
+      enabled: false
     resultsCache:
-      # -- Specifies whether memcached based results-cache should be enabled
       enabled: false
     singleBinary:
       replicas: 1
