chore(plex): new plex claim

--- a/cluster/apps/default/plex/secrets.enc.yaml
+++ b/cluster/apps/default/plex/secrets.enc.yaml
@@ -4,33 +4,33 @@ metadata:
     name: plex-secrets
     namespace: default
 stringData:
-    PLEX_CLAIM: ENC[AES256_GCM,data:Y/MppoJuGBYnkuh+EdlJmmW8BDqfxviXT4w=,iv:SxgkU9bEIOW/deHUMvpXL1m0cFTfh7uP4hPU6+J13JQ=,tag:KF6K3jTtNo62zt37HqOq0g==,type:str]
+    PLEX_CLAIM: ENC[AES256_GCM,data:reid3cIQHGu1/iey/KYSzMpU6gw9ZsrY1/8=,iv:vOTh6XSeI7QcSfUCg3nQo4Kw2AW+KP2AbOH8TjDTcA0=,tag:n+IHFVHNlcw44tBVzQYxcQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-08-31T18:47:09Z"
-    mac: ENC[AES256_GCM,data:+V8c3FEG2ygag2DyRmjuxQ95tniq1EhlHJfqJsX8+MZI0Wq2MyGUZcbqXW9vghsxRhJ8RmC0tHZWdorO9zXwuBnbQW2H50V6SHLGSByKt+HFgi3KoIpahIW+bqx5kWkCNVrOgySPnFOzz8onCy2yCB68ul0m+Kx0kt7dEu+5Dc0=,iv:AehmuImUT8Tvy3qT0fn5qtXfYp78DRWA/iBJ0qzpbl0=,tag:HCbKgICJS26T9ckdU4hIIw==,type:str]
+    lastmodified: "2024-08-23T11:41:33Z"
+    mac: ENC[AES256_GCM,data:gv7pLC6mpvU9pc/JVez70JQTin9LClWRxAzUyOMmxRTlrxWTzX/LaQA1+Ude+Lrk+Xl8EYDGCgcS5VERfU/f7D1xFI8iRASE+VSYS8Sw5LqTIM+RCbYlKOK1SS0eC5ZnAW2Rbujz3u4SJy9mAkS3pa/i653V2vXj8mi/ACOEoJc=,iv:4fIlzikHw5lvdYksQ0aZnjVeGUM1Vvi+LfXOQOF4qlM=,tag:GxNuUa3iyh5wYmoI8HSOEA==,type:str]
     pgp:
-        - created_at: "2023-08-31T18:47:08Z"
-          enc: |
+        - created_at: "2024-08-23T11:41:33Z"
+          enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/fsgg+5MP88UCZWFJvYWrqrV1+ZVXVAHNBPogFGUEQbUW
-            nwG77qwFnBTFfqujAvf/ph7qv77tJreKF1HXQXhXeJS1E9tCfkJuQhxZVL3sDQ2Z
-            l6lU+vQAsvM9eFrHraYZwJkUKVnIBzyIkcbUVcUh2iGunE05782DzAA3LBXydYAM
-            YeDkwqaRZ92/Ffc/F2MGymNMguhFXvtIkhrdIyPt48zLReczdZnFo7jJfvES669Y
-            HyyH5Ee15V+aIHac3SiyfSeRWcTsfhLEkRbH5s48we4uDT1LfABQwsYPoXXKynom
-            NvqF4nQSLYQ/TJHHFs7acMKzU2CBlZGwDsE0RghK14voOB515IKsaQGX8QvkG4tK
-            Czl9D79B3dkbhFljFCPEw1no8hOdXdGjX1X4N6GQ6s130w9L07aGj4R5tGXWAX2K
-            YPbKqfcP8ojYjt5ot6TH/jCAZ+4pJn0XIFLl/w7orOIIQtFPBpVoFj80mKCs51dZ
-            xdFYDwPoms4duJR9Jxwc0lwBdVYtZSQgFnu/7T/FSmiJsgG6URl/CXkjHxE7ylDH
-            hc8S+GonfOcNrk4LTcoaAyBzl00hROZzCeKzGuip8K+H0sck3Vfd2Z4mkuOgq54K
-            Jw0JLbrEHv+ngq8ZPg==
-            =hAkh
+            hQGMA71EESEn7N2iAQwAlIJZZTfO+XEDkAA3i1bAkYXqOuCEAlP+48skJOUdodD9
+            yfqvuzQGBQ1eTVNwVDe6yZ7eDRhy3g/DA33DviQ42onlgTN/kXpFlR1VxWVK7Z7P
+            ijBAHBrGZeWde3REq2EgIFgy1cqSD+d572DVEpMNko944cxFhbDwORToT35Z3ard
+            KO4/Ae/Nj87CMjZPBVRFs8XnY9Rs5qdMVafYiGKNSwHqlpswFB1elScT3nTMIaAC
+            jiTysHvXtARA0MZrGuR+sqShds128QhAuZzZ1rFOqJrSyA9gSrAVDiImahhoGUm6
+            U29wODRUvfcj73yVXEUU7J9LsEtJN76HgoaMatXAdxY/KoIVQgB2wg3sDCQLAoUl
+            l1NHzvzK6LhK36hmjJ1pBYIjnqml3QwgOSDubBI+oDij4arwVlR2Kgml2VGThMT5
+            s6URpGUy0jKShScYNpzd9WUG5kFb6Glg16AwmC/OoVU5kfAkkrP/IEyuu55FTRe2
+            R/jtXEYfzh2EhtxDv9Dg0l4BGL3ZCRrOkujvPNN41wThtoWcyMSgRv8rFGaTM8hh
+            4bWAvtQHRGk4aW9CRsEX3OxQIe2aC7FUEdTTThUQPBY+JisrA23TaC2gcsGu8Cnq
+            ws/zV2YmwFkIxvjOkbd8
+            =vVn1
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.9.0
