chore(plex): new plex claim

--- a/cluster/apps/default/plex/secrets.enc.yaml
+++ b/cluster/apps/default/plex/secrets.enc.yaml
@@ -4,32 +4,32 @@ metadata:
     name: plex-secrets
     namespace: default
 stringData:
-    PLEX_CLAIM: ENC[AES256_GCM,data:reid3cIQHGu1/iey/KYSzMpU6gw9ZsrY1/8=,iv:vOTh6XSeI7QcSfUCg3nQo4Kw2AW+KP2AbOH8TjDTcA0=,tag:n+IHFVHNlcw44tBVzQYxcQ==,type:str]
+    PLEX_CLAIM: ENC[AES256_GCM,data:vGedejzqcjS3nn2s7W/7mR6wPHokhHjESLs=,iv:5d0+7TcjBFrjseV+LwEpCCDaSylcMA6nMcjD08tzhBA=,tag:O6j7O3RDD8WUpGsuWXVJ7Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2024-08-23T11:41:33Z"
-    mac: ENC[AES256_GCM,data:gv7pLC6mpvU9pc/JVez70JQTin9LClWRxAzUyOMmxRTlrxWTzX/LaQA1+Ude+Lrk+Xl8EYDGCgcS5VERfU/f7D1xFI8iRASE+VSYS8Sw5LqTIM+RCbYlKOK1SS0eC5ZnAW2Rbujz3u4SJy9mAkS3pa/i653V2vXj8mi/ACOEoJc=,iv:4fIlzikHw5lvdYksQ0aZnjVeGUM1Vvi+LfXOQOF4qlM=,tag:GxNuUa3iyh5wYmoI8HSOEA==,type:str]
+    lastmodified: "2024-08-23T21:44:07Z"
+    mac: ENC[AES256_GCM,data:h0VLTDCAxp74RinxLq6PK0e33N3hM0s1WT7EGRcT2vXSPqklsy8SYEsSghe1D0BEOAIm74ISdIP98eZm0VRpaIcFnNlR8W8E6zHf+ie+lbQa6eFRS/g+cwgknos7CbZ3bqZoGybYM+YJ7/dtROhMtut8AiFCbD+RcWlsuVqRJgA=,iv:L3fvlTFqWyK3be4Y8PcwV7KIKJTKrHCN/dk//5UCBfA=,tag:t6ldwYZDx3Y0x9YWhMpDYw==,type:str]
     pgp:
-        - created_at: "2024-08-23T11:41:33Z"
+        - created_at: "2024-08-23T21:44:07Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQwAlIJZZTfO+XEDkAA3i1bAkYXqOuCEAlP+48skJOUdodD9
-            yfqvuzQGBQ1eTVNwVDe6yZ7eDRhy3g/DA33DviQ42onlgTN/kXpFlR1VxWVK7Z7P
-            ijBAHBrGZeWde3REq2EgIFgy1cqSD+d572DVEpMNko944cxFhbDwORToT35Z3ard
-            KO4/Ae/Nj87CMjZPBVRFs8XnY9Rs5qdMVafYiGKNSwHqlpswFB1elScT3nTMIaAC
-            jiTysHvXtARA0MZrGuR+sqShds128QhAuZzZ1rFOqJrSyA9gSrAVDiImahhoGUm6
-            U29wODRUvfcj73yVXEUU7J9LsEtJN76HgoaMatXAdxY/KoIVQgB2wg3sDCQLAoUl
-            l1NHzvzK6LhK36hmjJ1pBYIjnqml3QwgOSDubBI+oDij4arwVlR2Kgml2VGThMT5
-            s6URpGUy0jKShScYNpzd9WUG5kFb6Glg16AwmC/OoVU5kfAkkrP/IEyuu55FTRe2
-            R/jtXEYfzh2EhtxDv9Dg0l4BGL3ZCRrOkujvPNN41wThtoWcyMSgRv8rFGaTM8hh
-            4bWAvtQHRGk4aW9CRsEX3OxQIe2aC7FUEdTTThUQPBY+JisrA23TaC2gcsGu8Cnq
-            ws/zV2YmwFkIxvjOkbd8
-            =vVn1
+            hQGMA71EESEn7N2iAQv+Jfmi6EaVEh+gYvuwBP/txRWzhFzv3WwzrHF5huz0MsJ4
+            h3zGJARwPmcVVnISQAurV6cc46grTpP6AOWDn76OxPFRpanntcb60STfeQXr1436
+            G9+x8pdrqNHhzQvurP9hlh8MGQTpnTxRsFpExPCfPIDljsp5PxqnBqTzeFSnoTQl
+            YFMNSc1vZqEbMNqR4ZlpJ7/3mWmneEaF5OsYu/wfGeCAQujGsPj+siyQ2io06sY0
+            gmV6KrlZIqXq7iMRMo2QrJKM/M7dmwczbpihceON9tSDWthDiEaRK5JGx2QaXg63
+            4a86LQ+x1gaBBhgnPqbR82DlPi/RFIhq2t+aL3fcoGe8Sc4pIq7VFEGXbOaShW93
+            lYeQAebE2SzUZpIqseqsqP0cdx3PE0O80ODLzThBcefJgo3MO7V476oHuPMIw1Z7
+            rlGAldCIm365k0pjRb+4BenW07SILv7jBiNYMF9D78mk4Z7GxYTcDnLuox/kDmGY
+            j2C8/Vjs4CoBIdye+Gla0lwBp8HUNHyxklNgd6pLFUbCsIh06kzM/4ghEkKzFFQf
+            t3/JajhxTZtJkvIAlAfjjl0sW/sBUmHVmnrzQ9RHps2o0p04EBeaDO0iPHl33Bys
+            xa/cM3M4jKESYtP72w==
+            =bIuX
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
