fix(plex): fix plex claim env variable being wrongly named for onedr0p plex container

--- a/cluster/apps/default/plex/secrets.enc.yaml
+++ b/cluster/apps/default/plex/secrets.enc.yaml
@@ -4,32 +4,32 @@ metadata:
     name: plex-secrets
     namespace: default
 stringData:
-    PLEX_CLAIM: ENC[AES256_GCM,data:vGedejzqcjS3nn2s7W/7mR6wPHokhHjESLs=,iv:5d0+7TcjBFrjseV+LwEpCCDaSylcMA6nMcjD08tzhBA=,tag:O6j7O3RDD8WUpGsuWXVJ7Q==,type:str]
+    PLEX_CLAIM_TOKEN: ENC[AES256_GCM,data:GeZrZY+xnuypWh/eZtW9ZtXq7eQ7qkiuGaQ=,iv:v+0WuLdzfCajrRs5Aok8rStK1PYBtesWr3QVvzu6vuE=,tag:sYzEMp9gReQKen/4WAcaFA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2024-08-23T21:44:07Z"
-    mac: ENC[AES256_GCM,data:h0VLTDCAxp74RinxLq6PK0e33N3hM0s1WT7EGRcT2vXSPqklsy8SYEsSghe1D0BEOAIm74ISdIP98eZm0VRpaIcFnNlR8W8E6zHf+ie+lbQa6eFRS/g+cwgknos7CbZ3bqZoGybYM+YJ7/dtROhMtut8AiFCbD+RcWlsuVqRJgA=,iv:L3fvlTFqWyK3be4Y8PcwV7KIKJTKrHCN/dk//5UCBfA=,tag:t6ldwYZDx3Y0x9YWhMpDYw==,type:str]
+    lastmodified: "2024-08-23T21:52:46Z"
+    mac: ENC[AES256_GCM,data:DKu58LFIgltCEcEiNR1r/8PssnUFIbhh4CLCGoS9+hzAaxcnUTXh8Pp8M6LesI3gICMIuS9471y5HTfgQbZpqjMvjw38Ni/nmVfXdNIY0ahCKccLFQHTuY3JAtMH8kiuA6P9JtABPeI1riPrCsK8adYJhnjn9WZcAjBJ3y7e91c=,iv:TDPsmmOC1mcK3UmLiU0j4nGBRp8k+6xH7zYClwwfedo=,tag:+WyFplvREAb8Sq7cZecoog==,type:str]
     pgp:
-        - created_at: "2024-08-23T21:44:07Z"
+        - created_at: "2024-08-23T21:52:46Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv+Jfmi6EaVEh+gYvuwBP/txRWzhFzv3WwzrHF5huz0MsJ4
-            h3zGJARwPmcVVnISQAurV6cc46grTpP6AOWDn76OxPFRpanntcb60STfeQXr1436
-            G9+x8pdrqNHhzQvurP9hlh8MGQTpnTxRsFpExPCfPIDljsp5PxqnBqTzeFSnoTQl
-            YFMNSc1vZqEbMNqR4ZlpJ7/3mWmneEaF5OsYu/wfGeCAQujGsPj+siyQ2io06sY0
-            gmV6KrlZIqXq7iMRMo2QrJKM/M7dmwczbpihceON9tSDWthDiEaRK5JGx2QaXg63
-            4a86LQ+x1gaBBhgnPqbR82DlPi/RFIhq2t+aL3fcoGe8Sc4pIq7VFEGXbOaShW93
-            lYeQAebE2SzUZpIqseqsqP0cdx3PE0O80ODLzThBcefJgo3MO7V476oHuPMIw1Z7
-            rlGAldCIm365k0pjRb+4BenW07SILv7jBiNYMF9D78mk4Z7GxYTcDnLuox/kDmGY
-            j2C8/Vjs4CoBIdye+Gla0lwBp8HUNHyxklNgd6pLFUbCsIh06kzM/4ghEkKzFFQf
-            t3/JajhxTZtJkvIAlAfjjl0sW/sBUmHVmnrzQ9RHps2o0p04EBeaDO0iPHl33Bys
-            xa/cM3M4jKESYtP72w==
-            =bIuX
+            hQGMA71EESEn7N2iAQv/YSAjp2kmUamSDs/s1m2g9FykovWZxaxnhgLr/ubaV7RG
+            fy+GnP/lDoKRNJGqVi5gRFwyYwjnYA9IA/61FVKxdKxLZj82Zb1R0zMql4MJ34xR
+            eaFQHDSJhYSapEbgxQDgIYrPO3GeTYE4+Q/Ep3HjIBx5DuWJTBPQn+XVJN3uRoiE
+            1/I8IlDOeY/gmqTtnk2nYAxXsyR/8nxDkvVEOw/vaClTk88mvoRpFZLHQg66YXZP
+            1l3jh9WbHrzEXMClvNj8JA5dSgXRT7mxuE9dX5gE7+lJ0MsKeIijqFUjj3EqPLpI
+            wMpAJFZWM1ibhdmVcqSutw5YhHWqyOQBiwLnIcP4fdUZIhCcU3eZyzIqt2F126hm
+            UiSfIZU35p0mOGvGHPXB3s1gY/I3sOHEOnqIRP9HHehwp19w1b7i9rDyz6SJv03L
+            +UbHQnseHdDCMrmc0Zha+aAFDGqftmhoc38I0mv/759Yv+6iynIhDFQjLe0KZzVo
+            wikeT6PUm+pdp8UUm6NK0l4BW1AJfydXwlOpdy41bOPu1ElADqZFsZlWwmFAFE16
+            H6O5mQTDArLGdBHXOwmr3OzhbP6WO0mlvJVjxeJl+E+X6WcYcFrz9ww5S4p3MUl5
+            VXmnEWkuHOJEyPmAOcwq
+            =g+pO
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
