--- a/cluster/apps/networking/nginx/configmap.yaml
+++ b/cluster/apps/networking/nginx/configmap.yaml
@@ -8,10 +8,10 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
 data:
   X-Correlation-ID: "$request_id"
-  X-GeoIP-Country-Code: "$geoip2_city_country_code"
-  X-GeoIP-Country-Name: "$geoip2_city_country_name"
-  X-GeoIP-Region: "$geoip2_region_name"
-  X-GeoIP-City: "$geoip2_city"
-  X-GeoIP-Postal-Code: "$geoip2_postal_code"
-  X-GeoIP-Latitude: "$geoip2_latitude"
-  X-GeoIP-Longitude: "$geoip2_longitude"
+#  X-GeoIP-Country-Code: "$geoip2_city_country_code"
+#  X-GeoIP-Country-Name: "$geoip2_city_country_name"
+#  X-GeoIP-Region: "$geoip2_region_name"
+#  X-GeoIP-City: "$geoip2_city"
+#  X-GeoIP-Postal-Code: "$geoip2_postal_code"
+#  X-GeoIP-Latitude: "$geoip2_latitude"
+#  X-GeoIP-Longitude: "$geoip2_longitude"
