--- a/cluster/apps/wazuh-system/wazuh-dashboard/secret.enc.yaml
+++ b/cluster/apps/wazuh-system/wazuh-dashboard/secret.enc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-    name: dashboard-cred
+    name: wazuh-dashboard-secrets
     namespace: wazuh-system
 stringData:
     username: ENC[AES256_GCM,data:9xteraOX,iv:vziOh2KviMriYhCMBbWcF5X7WjhpEClnfZ9VWhNSvCU=,tag:DI4nSdX4YyWGG7C84XpGdA==,type:str]
