feat(wazuh): add node affinity to wazuh dashboard

--- a/cluster/apps/wazuh-system/wazuh-dashboard/deployment.yaml
+++ b/cluster/apps/wazuh-system/wazuh-dashboard/deployment.yaml
@@ -87,3 +87,12 @@ spec:
                 secretKeyRef:
                   name: wazuh-api-secrets
                   key: password
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: kubernetes.io/arch
+                    operator: In
+                    values:
+                      - amd64
