wip(wazuh): add indexer

--- a/cluster/apps/wazuh-system/wazuh-dashboard/deployment.yaml
+++ b/cluster/apps/wazuh-system/wazuh-dashboard/deployment.yaml
@@ -52,7 +52,7 @@ spec:
               name: dashboard
           env:
             - name: INDEXER_URL
-              value: 'https://indexer:9200'
+              value: "http://indexer-api-svc.wazuh-system.svc.cluster.local:9200"
             - name: INDEXER_USERNAME
               valueFrom:
                 secretKeyRef:
