--- a/cluster/apps/wazuh-system/indexer/indexer-api-svc.yaml
+++ b/cluster/apps/wazuh-system/indexer/indexer-api-svc.yaml
@@ -10,7 +10,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: indexer-api-svc
+  name: wazuh-indexer-api-svc
   namespace: wazuh-system
   labels:
     app: wazuh-indexer
