--- a/cluster/apps/wazuh-system/indexer/statefulset.yaml
+++ b/cluster/apps/wazuh-system/indexer/statefulset.yaml
@@ -39,12 +39,12 @@ spec:
         - name: volume-mount-hack
           image: busybox
           resources:
-            requests:
-              cpu: 50m
-              memory: 128Mi
+#            requests:
+#              cpu: 50m
+#              memory: 128Mi
             limits:
-              cpu: 100m
-              memory: 256Mi
+              cpu: "1"
+              memory: 1Gi
           command:
             - sh
             - '-c'
