--- a/cluster/apps/wazuh-system/indexer/statefulset.yaml
+++ b/cluster/apps/wazuh-system/indexer/statefulset.yaml
@@ -39,12 +39,12 @@ spec:
         - name: volume-mount-hack
           image: busybox
           resources:
-#            requests:
-#              cpu: 50m
-#              memory: 128Mi
+            requests:
+              cpu: 50m
+              memory: 128Mi
             limits:
-              cpu: "1"
-              memory: 1Gi
+              cpu: 100m
+              memory: 256Mi
           command:
             - sh
             - '-c'
@@ -66,7 +66,7 @@ spec:
           resources:
             limits:
               cpu: 500m
-              memory: 1564Mi
+              memory: 2Gi
           env:
             - name: OPENSEARCH_JAVA_OPTS
               value: '-Xms1g -Xmx1g -Dlog4j2.formatMsgNoLookups=true'
