--- a/cluster/apps/wazuh-system/indexer/configmap.yaml
+++ b/cluster/apps/wazuh-system/indexer/configmap.yaml
@@ -10,7 +10,7 @@ data:
     cluster.name: ${CLUSTER_NAME}
     node.name: ${NODE_NAME}
     network.host: ${NETWORK_HOST}
-    discovery.seed_hosts: wazuh-indexer-0.wazuh-indexer
+    discovery.seed_hosts: wazuh-indexer-0.wazuh-indexer-discovery-svc
     cluster.initial_master_nodes:
       - wazuh-indexer-0
     
