wip(wazuh): attempt at making wazuh indexer work

--- a/cluster/apps/wazuh-system/indexer/statefulset.yaml
+++ b/cluster/apps/wazuh-system/indexer/statefulset.yaml
@@ -13,11 +13,11 @@ metadata:
   name: wazuh-indexer
   namespace: wazuh-system
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: wazuh-indexer
-  serviceName: wazuh-indexer
+  serviceName: wazuh-indexer-discovery-svc
   template:
     metadata:
       labels:
