chore(wazuh): change dashboard credentials

--- a/cluster/apps/wazuh-system/wazuh-dashboard/secret.enc.yaml
+++ b/cluster/apps/wazuh-system/wazuh-dashboard/secret.enc.yaml
@@ -5,33 +5,33 @@ metadata:
     name: wazuh-dashboard-secrets
     namespace: wazuh-system
 stringData:
-    username: ENC[AES256_GCM,data:9xteraOX,iv:vziOh2KviMriYhCMBbWcF5X7WjhpEClnfZ9VWhNSvCU=,tag:DI4nSdX4YyWGG7C84XpGdA==,type:str]
-    password: ENC[AES256_GCM,data:VfHziqh87dv14RZ9EzPbH6YkOcJcda1kl6ijZUJI,iv:CgxQTgZlhxjXOdi6NuWyvJrp5jivUJxeJc46qbR7AvI=,tag:jU2TJVByVqHHRyYIo/58Xw==,type:str]
+    username: ENC[AES256_GCM,data:usRM16SfOqGifc6r,iv:SyJu272uo/HckfgCZ0zQX/nN0f+D2U7IJLyb0iHZa14=,tag:w0mWHMKb/9SSk4XT8p9FNw==,type:str]
+    password: ENC[AES256_GCM,data:hyYDidUnsjwmtb4Y,iv:KfjLH9PyrYUykI2BJqMZEsMuQHxiU13J2hwCCIjQE3M=,tag:YUFeiwP2P16YqwUSSIg0WQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2024-09-09T13:41:05Z"
-    mac: ENC[AES256_GCM,data:SAtzj/UCt1tBjUiCu5iR3AUMOxUCfigeoWsqlN9+MvY1SFvuY71xfLWATHATaCeGUXcrZTblUTtU7nDhZbBegilIqhMN7nQVXP8+T27fQiKvPL/OrCCI8daebJVhu6kyawfWTcHxL2ApXarIzzr3KKjFRixhIZ0zrzn13dBBrQw=,iv:rY65leZPvoafn2vZiWxt7cFxhg4Coe/SXedlRbAB02M=,tag:ByX9dbFHtgqlhKCyli7ikw==,type:str]
+    lastmodified: "2024-09-09T17:57:02Z"
+    mac: ENC[AES256_GCM,data:eb94X4VlZJhwjVpavKKdgk54EDjs6vqNUaFR7YqA4eYYq51Mypu/5Zu6Dzg8+VZ5WpJ28uIokD6rFxPAnzVNo0p+Ix4C9MQOonPyIKa9wXk0Jjrsp/bonoGJsP2nWagBuJXvBOO5xWFKEDnplWsp/pKsFSRwcXkgcD5cLnETk8c=,iv:SjrdCu5h4jWaMf8y1Adi0J0iB/ZQHN6te94lQXC1FJY=,tag:D8vB8+dRrPasxQJ7EM7rHw==,type:str]
     pgp:
-        - created_at: "2024-09-09T13:41:05Z"
+        - created_at: "2024-09-09T17:57:02Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQwAlQvzMDbqzME/8SFkgCk6f/1rT5fwdLGdGLTHjW84IMp3
-            cPZg8KrLQqXylkwMHCwhaK3kj4Z5PvPQa/lapWMS3i9EDgoZHlMZ9ejA2EPZN73u
-            1vWBmf60gv4/GFf+qlgpcR9kzBr4Gaw/o1D5epop5frmEAbjT0/vVOAxGXO7PtCr
-            AkLpoqgo5ac96K29W2ibZhtS4tuL3mXUEnNLjnU9QdkcAOx3U0zZ+eSHO+59iwq1
-            YFB1b0rTu6FaN/gNVAY4RJS/wH79VVBkiaBDfBLb1Kq6cw4FjZ8JeCQc/Qfk8xFI
-            SwGiZE5+cx+cY/f8opkAz9k0uR0YFtQc4Mf7PPi3m1MAvCTVo9EuQA+v0ykbT3LR
-            0isUxfVS6+sq2WsuSNEuA+XP4XT44MQwDhXoV2AjFFMq5gkrB98J3FKd7jFDvXE7
-            u8ftvl8P+tjBA2p0JyUxAT9SoKBsJ9/H5BJZQw9m97tk2A685yGj9wdsmNNSebIb
-            HF/j77qPhb4s/KQUqfCQ0l4ByVLQJ7+glmsd+YMjwHESSKvauxIBDOBwTawiQPtf
-            C0FWkwG+AVE7qnLQXg0RlAqWCOGqHh/gBeQ6R5If/+VLiHFRhOql1i1FgXcyFM3P
-            PT3JPYFvx5B+8iPnm7EF
-            =xYYt
+            hQGMA71EESEn7N2iAQwAiqcLq/gaVeAoBzLRLmdO/ZSVmkYLHgBinIfwgqAZx2Jh
+            49VJZG/cv5yDqNF5xEamC86WGlHNB4Tq7qDCPCrXs8JyKhzf9mEp6YHybyFS5IwP
+            qidbK95lBT+LuOT6CntiTc6KqNnU6X7qvOKGoDklwZ27kc2J8CEpU4VfZIa8Kv6K
+            NrFM5z92F/ggnkxQwniQAlQTmk7wAxX1TKF/T6p/4Ws467vmkTB8ZCtXhCoDLcLG
+            qQKdiI5mzofWWVfCz6hl0tk9qWWrEAqEwdH+nxUfvjTsx+qJUZ8AgojLAZfWSmNk
+            U2KbonSEPCCJtT3F+z2pFRZV6SVb/zDnBSPm9Qa9B4RV+MgI6BHoV0coPlIKMO6/
+            DBQuyru5jAarWysfDCr55iolaEOPpnvsjAQBYs5l+sGnapdGVr4Kfkn5t6Ae6hQW
+            RPFiKWy9hcRAh2Ly54BDzs6sWIflK4Iy5FFmCpfhLQ028V/zlS2+FqZdd/Q18hrD
+            cZ8eZfXpkTTVmVazjjWZ0l4Bn+1hUyFd/FSKufU/qP+uJzOP/2ZeEoIMxM2B8Z6y
+            KzhRV0yKGscvl9m1IYbGWQS+HYN4DifnrBSAJHuGNlTrz1frvFltTBRtHXkgIFxb
+            7+sPi6nrJtUk5zWUTeB+
+            =bpfB
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
