chore(wazuh): fix wrong namespace in wazuh worker

--- a/cluster/apps/wazuh-system/manager/worker/statefulset.yaml
+++ b/cluster/apps/wazuh-system/manager/worker/statefulset.yaml
@@ -11,7 +11,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: wazuh-manager-worker
-  namespace: wazuh
+  namespace: wazuh-system
 spec:
   replicas: 1
   selector:
